--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>plerdy</title>
-    <link rel="icon" href="/popupIcon.df4213a2.svg">
-    <link rel="stylesheet" href="/index.044e704e.css">
-    <script src="/index.18dbc454.js" defer=""></script>
+    <link rel="icon" href="./popupIcon.df4213a2.svg">
+    <link rel="stylesheet" href="./index.044e704e.css">
+    <script src="./index.18dbc454.js" defer=""></script>
   </head>
   <body>
     <div class="wrapper">
