phone list was fixed

--- a/src/index.html
+++ b/src/index.html
@@ -248,7 +248,7 @@
         <section class="modal-window">
           <div class="container">
             <div 
-            class="modal fade" 
+            class="modal fade"  
             id="exampleModal" 
             tabindex="-1" 
             aria-labelledby="exampleModalLabel" 
@@ -321,7 +321,7 @@
                       </ul>
                     </div>
                     <input 
-                    type="name" 
+                    type="tel" 
                     class="form-conrol-number" 
                     placeholder="XXX XXX XXX"
                     id="input-tel"
